--- a/configs/msg_cca_toy.config
+++ b/configs/msg_cca_toy.config
@@ -1,7 +1,7 @@
-data=data/toy_data_view1.csv,data/toy_data_view2.csv
+data=data/toy_data_train_view1.csv,data/toy_data_train_view2.csv
 algorithm=msg_cca
 savefile=test.pkl
-dx=2
+dx=3
 dy=2
 k=2
 learning_rate=1
